--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:node="replace">
-        <activity android:name=".AdminLicenseUserDevice"></activity>
+        <activity android:name=".AdminLicenseUsersControl"></activity>
+        <activity android:name=".AdminLicenseUserDevice" />
         <activity android:name=".AdminLicenseUsers" />
         <activity android:name=".AdminLicenseDevices" />
         <activity android:name=".AdminLicenseTokens" />
