--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         applicationId "com.far.basesales"
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:16.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
     //implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'org.jsoup:jsoup:1.10.2'
     implementation 'com.android.support:multidex:1.0.3'
@@ -42,8 +43,9 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:support-annotations:24.2.0'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation project(path: ':farpdf')
-    compile project(path: ':bluetoothlibrary')
+    implementation project(path: ':bluetoothlibrary')
 
 }
 
