--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:node="replace">
-        <activity android:name=".AdminLicenseUsersControl"></activity>
+        <activity android:name=".MaintenanceCompany"></activity>
+        <activity android:name=".AdminLicenseUsersControl" />
         <activity android:name=".AdminLicenseUserDevice" />
         <activity android:name=".AdminLicenseUsers" />
         <activity android:name=".AdminLicenseDevices" />
